[workspace]
resolver = "2"
members = [
  "renderer",
  "vello",
  "vger",
  "tiny_skia",
  "reactive",
  "editor-core",
  "examples/*",
]

[workspace.package]
license = "MIT"
version = "0.2.0"

[package]
name = "floem"
version.workspace = true
authors = ["The Floem contributors"]
readme = "README.md"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
edition = "2024"
rust-version = "1.87"
license.workspace = true

[workspace.dependencies]
peniko = { version = "0.4.0" }
serde = { version = "1.0" }
lapce-xi-rope = { version = "0.3.2" }
strum = { version = "0.27", features = ["derive"] }
strum_macros = { version = "0.27" }
# Image format features are defined via new features
image = { version = "0.25", default-features = false }
im = { version = "15.1.0" }
resvg = { version = "0.45.1" }
raw-window-handle = "0.6.0"
wgpu = { version = "24.0.5" }
parking_lot = { version = "0.12" }
swash = { version = "0.2.5" }
muda = { git = "https://github.com/tauri-apps/muda", rev = "8e986af3cea96a729413abc75c3702dec3990bd2", default-features = false }
# winit = { git = "https://github.com/rust-windowing/winit", rev = "ee245c569d65fdeacf705ee5eedb564508d10ebe" }
winit = { git = "https://github.com/rust-windowing/winit"  }
ui-events = "*"
ui-events-winit = "*"

[dependencies]
slotmap = "1.0"
sha2 = "0.10"
bitflags = "2.9"
indexmap = "2"
rustc-hash = "2.1"
smallvec = "1.15"
educe = "0.6"
taffy = { version = "0.8", features = ["grid"] }
rfd = { version = "0.15", default-features = false, features = [
  "xdg-portal",
], optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
raw-window-handle = { workspace = true }
unicode-segmentation = "1.10"
peniko = { workspace = true }
im-rc = "15.1.0"
serde = { workspace = true, optional = true }
lapce-xi-rope = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
floem_renderer = { path = "renderer", version = "0.2.0" }
floem_vello_renderer = { path = "vello", version = "0.2.0", optional = true }
floem_vger_renderer = { path = "vger", version = "0.2.0", optional = true }
floem_tiny_skia_renderer = { path = "tiny_skia", version = "0.2.0" }
floem_reactive = { path = "reactive", version = "0.2.0" }
floem-editor-core = { path = "editor-core", version = "0.2.0", optional = true }
copypasta = { version = "0.10", default-features = false, features = [
  "wayland",
  "x11",
] }
parking_lot = { workspace = true }
image = { workspace = true }
im = { workspace = true }
winit = { workspace = true }
futures = { version = "0.3.31", optional = true }
crossbeam = { version = "0.8", optional = true }
ui-events.workspace = true
ui-events-winit.workspace = true
wgpu.workspace = true

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
muda = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
web-time = "1"
wgpu = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "3.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSView"] }

[features]
default = ["editor", "default-image-formats", "vger"]

vello = ["dep:floem_vello_renderer"]
vger = ["dep:floem_vger_renderer"]

serde = [
  "dep:serde",
  "winit/serde",
  "peniko/serde",
  "lapce-xi-rope/serde",
  "smallvec/serde",
  "floem-editor-core?/serde"
]

editor = [
  "floem-editor-core",
  "dep:lapce-xi-rope",
  "dep:strum",
  "dep:strum_macros",
]

# Image support
# From: https://github.com/image-rs/image/blob/main/Cargo.toml
default-image-formats = ["image-jpeg", "image-ico", "image-png", "image-webp"]
image-avif = ["image/avif"]
image-bmp = ["image/bmp"]
image-dds = ["image/dds"]
image-exr = ["image/exr"]
image-ff = ["image/ff"]
image-gif = ["image/gif"]
image-hdr = ["image/hdr"]
image-ico = ["image/ico"]
image-jpeg = ["image/jpeg"]
image-png = ["image/png"]
image-pnm = ["image/pnm"]
image-qoi = ["image/qoi"]
image-tga = ["image/tga"]
image-tiff = ["image/tiff"]
image-webp = ["image/webp"]

tokio = ["dep:tokio"]

# rfd (file dialog) async runtime
rfd-async-std = ["dep:rfd", "rfd/async-std"]
rfd-tokio = ["dep:rfd", "rfd/tokio"]
futures = ["dep:futures"]

crossbeam = [ "dep:crossbeam", "floem_renderer/crossbeam" ]


[patch.crates-io]
ui-events = { path = "../ui-events/ui-events" }
ui-events-winit = { path = "../ui-events/ui-events-winit" }
keyboard-types = { git = "https://github.com/rust-windowing/keyboard-types" }
winit = { git = "https://github.com/rust-windowing/winit" }
dpi = {git = "https://github.com/rust-windowing/winit"}

