[workspace]
resolver = "3"
members = [
  "reactive",
  "editor-core",
  "examples/*",
  "ui-events-winit",
  "test",
]
default-members = [
  ".",
  "reactive",
  "editor-core",
  "ui-events-winit",
  "test",
]

[workspace.package]
license = "MIT"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/lapce/floem"

[package]
name = "floem"
version.workspace = true
authors = ["The Floem contributors"]
readme = "README.md"
repository.workspace = true
description = "A native Rust UI library with fine-grained reactivity"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[workspace.dependencies]
peniko = { version = "0.6.0", features = ["serde"] }
parley = { version = "0.7.0" }
fontique = { version = "0.7.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
lapce-xi-rope = "0.4.0"
strum = { version = "0.28", features = ["derive"] }
strum_macros = { version = "0.28" }
# Image format features are defined via new features
image = { version = "0.25", default-features = false }
imbl = "7.0"
tiny-skia = { version = "0.11.4" }
raw-window-handle = "0.6.0"
unicode-segmentation = "1.10"
wgpu = { version = "28.0" }
parking_lot = { version = "0.12" }
swash = { version = "0.2" }
muda = { version = "0.17.1", default-features = false }
winit = { git = "https://github.com/lapce/winit", rev = "133268de675a4fda70816d78a7a1435eb972fea1", package = "floem-winit" }
ui-events = { version = "0.3", features = ["kurbo"] }
ui-events-winit = { path = "./ui-events-winit", package = "ui-events-floem-winit" }
dpi = { version = "0.1.2", default-features = false }
rustc-hash = "2.1"
imaging = { path = "../imaging/imaging", package = "imaging" }
imaging_wgpu = { path = "../imaging/imaging_wgpu", package = "imaging_wgpu", features = ["wgpu-28"] }
svg_imaging = { path = "../imaging/svg_imaging", package = "svg_imaging" }
understory_frame_pacing = { path = "../understory/understory_frame_pacing", package = "understory_frame_pacing" }

[dependencies]
slotmap = "1.0"
sha2 = "0.10"
bitflags = "2.9"
indexmap = "2"
rustc-hash.workspace = true
imaging = { workspace = true, features = ["std"] }
imaging_wgpu = { workspace = true }
svg_imaging.workspace = true
smallvec = "1.15"
educe = "0.6"
taffy = { version = "0.9.2", features = ["grid"] }
rfd = { version = "0.17.1", default-features = true}
tokio = { version = "1", features = ["sync", "rt"], optional = true }
raw-window-handle = { workspace = true }
unicode-segmentation = { workspace = true }
peniko = { workspace = true }
imbl.workspace = true
parley = { workspace = true }
fontique = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
lapce-xi-rope = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
paste = "1.0"
floem_vger_renderer = { path = "../vger-rs", package = "floem-vger", optional = true }
imaging_vello = { path = "../imaging/imaging_vello", optional = true }
imaging_skia = { path = "../imaging/imaging_skia", optional = true, features = ["gpu"] }
imaging_tiny_skia = { path = "../imaging/imaging_tiny_skia", optional = true }
imaging_vello_cpu = { path = "../imaging/imaging_vello_cpu", optional = true }
imaging_vello_hybrid = { path = "../imaging/imaging_vello_hybrid", optional = true }
floem_reactive = { path = "reactive", version = "0.2.0" }
floem-editor-core = { path = "editor-core", version = "0.2.0", optional = true }
subduction_core = { path = "../subduction/subduction_core", package = "subduction_core", features = ["std"] }
subduction_render = { path = "../subduction/subduction_render", package = "subduction_render", features = ["std"] }
subduction = { path = "../subduction/subduction", package = "subduction" }
copypasta = { version = "0.10", default-features = false, features = [
  "wayland",
  "x11",
] }
parking_lot = { workspace = true }
swash = { workspace = true, features = ["scale"] }
image = { workspace = true }
softbuffer = "0.4.1"
winit = { workspace = true }
futures = { version = "0.3.31" }
crossbeam = { version = "0.8", optional = true }
ui-events.workspace = true
ui-events-winit.workspace = true
dpi.workspace = true
wgpu.workspace = true
fluent-bundle = { version = "0.16", optional = true }
unic-langid = { version = "0.9", optional = true }
sys-locale = { version = "0.3.2", optional = true }
ouroboros = { version = "0.18", optional = true }
understory_box_tree = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_box_tree" }
understory_event_state = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_event_state" }
understory_index = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_index" }
understory_focus = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_focus" }
understory_virtual_list = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_virtual_list" }
understory_view2d = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_view2d" }
understory_frame_pacing.workspace = true

# understory_box_tree = { path = "../understory/understory_box_tree", package = "understory_box_tree" }
# understory_event_state = { path = "../understory/understory_event_state", package = "understory_event_state" }
# understory_index = { path = "../understory/understory_index", package = "understory_index" }
# understory_focus = { path = "../understory/understory_focus", package = "understory_focus" }
# understory_virtual_list = { path = "../understory/understory_virtual_list", package = "understory_virtual_list" }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
muda = { workspace = true }

[target.'cfg(any(target_os = "linux"))'.dependencies]
muda = { workspace = true, default-features = false, features = ["gtk"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
web-time = "1"
wgpu = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4"
subduction_backend_windows = { path = "../subduction/subduction_backend_windows", package = "subduction_backend_windows" }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
metal = "0.33"
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false }
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSResponder",
  "NSView",
  "objc2-quartz-core",
] }
dispatch2 = {version = "0.3.0"}
subduction_backend_apple = { path = "../subduction/subduction_backend_apple", package = "subduction_backend_apple", default-features = false, features = ["appkit", "ca-display-link", "cametal-display-link", "cv-display-link", "wgpu"] }

[features]
default = [
  "editor",
  "default-image-formats",
  "serde",
  "vger",
  "vello-cpu"
]
vello = ["dep:imaging_vello"]
vger = ["dep:floem_vger_renderer"]
vello-hybrid = ["dep:imaging_vello_hybrid"]
vello-cpu = ["dep:imaging_vello_cpu"]
skia = ["dep:imaging_skia"]
skia-cpu = ["dep:imaging_skia"]
tiny-skia = ["dep:imaging_tiny_skia"]
serde = [
  "dep:serde",
  "winit/serde",
  "peniko/serde",
  "lapce-xi-rope/serde",
  "smallvec/serde",
  "floem-editor-core?/serde",
]
editor = [
  "floem-editor-core",
  "dep:lapce-xi-rope",
  "dep:strum",
  "dep:strum_macros",
]
# Image support
# From: https://github.com/image-rs/image/blob/main/Cargo.toml
default-image-formats = ["image-jpeg", "image-ico", "image-png", "image-webp"]
image-avif = ["image/avif"]
image-bmp = ["image/bmp"]
image-dds = ["image/dds"]
image-exr = ["image/exr"]
image-ff = ["image/ff"]
image-gif = ["image/gif"]
image-hdr = ["image/hdr"]
image-ico = ["image/ico"]
image-jpeg = ["image/jpeg"]
image-png = ["image/png"]
image-pnm = ["image/pnm"]
image-qoi = ["image/qoi"]
image-tga = ["image/tga"]
image-tiff = ["image/tiff"]
image-webp = ["image/webp"]
tokio = ["dep:tokio"]
# rfd (file dialog) async runtime
crossbeam = ["dep:crossbeam"]
localization = ["dep:fluent-bundle", "dep:unic-langid", "dep:sys-locale", "dep:ouroboros"]

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
peniko = { workspace = true }

[patch.crates-io]
kurbo = { path = "../kurbo/kurbo" }
# naga = { path = "../wgpu/naga" }
# wgpu = { path = "../wgpu/wgpu" }
# wgpu-core = { path = "../wgpu/wgpu-core" }
# wgpu-hal = { path = "../wgpu/wgpu-hal" }
# wgpu-macros = { path = "../wgpu/wgpu-macros" }
# wgpu-types = { path = "../wgpu/wgpu-types" }
vello_common = { path = "../vello/sparse_strips/vello_common" }
vello_hybrid = { path = "../vello/sparse_strips/vello_hybrid" }

[[bench]]
name = "event_dispatch"
harness = false

[[bench]]
name = "style_computation"
harness = false

[[bench]]
name = "painting"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "animation"
harness = false

[[bench]]
name = "text"
harness = false

[[bench]]
name = "editor_layout_cols"
harness = false

[[bench]]
name = "view_creation"
harness = false
