[package]
name = "floem_style"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "Style engine for Floem UI"
license.workspace = true

[dependencies]
bitflags = "2.9"
taffy = { version = "0.9.2", features = ["grid"] }
rustc-hash = { workspace = true }
peniko = { workspace = true }
parley = { workspace = true }
smallvec = "1.15"
paste = "1.0"
slotmap = "1.0"
floem_renderer = { path = "../renderer", version = "0.2.0" }
floem_reactive = { path = "../reactive", version = "0.2.0" }
understory_box_tree = { git = "https://github.com/jrmoulton/understory", rev = "2c2abb8c4bd9", package = "understory_box_tree" }
unic-langid = { version = "0.9", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[features]
localization = ["dep:unic-langid"]
