[package]
name = "floem_renderer"
version.workspace = true
edition = "2021"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
parking_lot = { workspace = true }
peniko = { workspace = true }
resvg = { workspace = true }
parley = { workspace = true }
fontique = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
crossbeam = { version = "0.8", optional = true }
futures = "0.3.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }

[features]
crossbeam = ["dep:crossbeam"]
