[package]
name = "floem_skia_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
anyhow = "1.0"
# anyrender = {path = "../../anyrender/crates/anyrender", package = "anyrender"}
# anyrender_skia = { path = "../../anyrender/crates/anyrender_skia", package = "anyrender_skia" }
anyrender = { git = "https://github.com/jrmoulton/anyrender", rev = "e38ca6c35f45" }
anyrender_skia = { git = "https://github.com/jrmoulton/anyrender", rev = "e38ca6c35f45" }
floem_renderer = { path = "../renderer", version = "0.2.0" }
kurbo = "0.13"
parley = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }
resvg = { workspace = true }
winit = { workspace = true }
