[package]
name = "floem_skia_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
imaging = { workspace = true }
peniko = { workspace = true }
wgpu = { workspace = true }

anyhow = "1.0"
imaging_skia = { path = "../../imaging/imaging_skia", features = ["wgpu"] }
floem_renderer = { path = "../renderer", version = "0.2.0" }
skia-safe = { version = "0.90.0", features = ["gl"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
skia-safe = { version = "0.90.0", features = ["metal"] }
