[package]
name = "floem-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Testing utilities for Floem UI applications"
repository.workspace = true

[dependencies]
floem = { path = ".." }
ui-events.workspace = true

[dev-dependencies]
serial_test = "3.2"
