[package]
name = "floem_tiny_skia_renderer"
version.workspace = true
edition = "2021"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[features]
default = ["wayland-dlopen", "x11-dlopen"]
wayland-dlopen = ["softbuffer/wayland-dlopen"]
x11-dlopen = ["softbuffer/x11-dlopen"]

[dependencies]
peniko = { workspace = true }
image = { workspace = true }
resvg = { workspace = true }
raw-window-handle = { workspace = true }

futures = "0.3.26"
anyhow = "1.0.69"
swash = "0.1.8"
floem_renderer = { path = "../renderer", version = "0.1.0" }
softbuffer = { version = "0.4.1", default-features = false, features = ["kms", "x11", "wayland"] }
bytemuck = "1.12"
