[package]
name = "floem_tiny_skia_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
peniko = { workspace = true }
resvg = { workspace = true }
raw-window-handle = { workspace = true }
parley = { workspace = true }
swash = { workspace = true }
rustc-hash.workspace = true

anyhow = "1.0"
floem_renderer = { path = "../renderer", version = "0.2.0" }
softbuffer = "0.4.1"
