[package]
name = "floem_vello_renderer"
version.workspace = true
edition = "2021"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
peniko = { workspace = true }
wgpu = { workspace = true }

anyhow = "1.0"
vello = "0.6.0"
vello_svg = "0.8.0"
floem_renderer = { path = "../renderer", version = "0.2.0" }
