[package]
name = "floem_vello_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
peniko = { workspace = true }
parley = { workspace = true }
wgpu = { workspace = true }
imaging = { workspace = true }

anyhow = "1.0"
imaging_vello = { path = "../../imaging/imaging_vello" }
vello = "0.8.0"
floem_renderer = { path = "../renderer", version = "0.2.0" }
