[package]
name = "floem_vello_hybrid_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
anyhow = "1.0"
imaging = { workspace = true }
imaging_vello_hybrid = { path = "../../imaging/imaging_vello_hybrid" }
floem_renderer = { path = "../renderer", version = "0.2.0" }
peniko = { workspace = true }
parley = { workspace = true }
vello_hybrid = "0.0.6"
