[package]
name = "floem_vger_renderer"
version.workspace = true
edition.workspace = true
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies.floem-vger-rs]
git = "https://github.com/lapce/vger-rs"
rev = "9a947c453200f4e5de7780c57de784f1d96f0714"
package = "floem-vger"

[dependencies]
image = { workspace = true }
peniko = { workspace = true }
imaging = { workspace = true, features = ["std"] }
imaging_wgpu = { workspace = true }
imaging_vello_cpu = { path = "../../imaging/imaging_vello_cpu" }
wgpu = { workspace = true }
parley = { workspace = true }
swash = { workspace = true }

anyhow = "1.0"
