[package]
name = "async-resource"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
floem = {path = "../../", features = ["tokio"]}
serde.workspace = true
thiserror = "2"
reqwest = {version  = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
open = "5.3.2"
