[package]
name = "external-surface-cube"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
floem = { path = "../..", default-features = false, features = ["editor", "skia"] }
subduction_core = { path = "../../../subduction/subduction_core", package = "subduction_core" }
subduction_platform = { path = "../../../subduction/subduction_platform", package = "subduction_platform" }
wgpu.workspace = true
