[package]
name = "files"
version = "0.1.0"
edition = "2021"

[dependencies]
floem = { path = "../..", default-features = false, features = [
  "editor",
  "default-image-formats",
  "serde",
] }

[features]
default = ["vello-cpu"]
vello-cpu = ["floem/vello-cpu"]
vello = ["floem/vello"]
vello-hybrid = ["floem/vello-hybrid"]
