[package]
name = "keyboard_handler"
edition = "2021"
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = { path = "../.." }
floem-winit = { version = "0.29.4", features = ["rwh_05"] }
