[package]
name = "widget-gallery"
version = "0.1.0"
edition = "2024"

[dependencies]
floem = { path = "../..", default-features = false, features = [
  "editor",
  "default-image-formats",
  "fallback-vello-cpu",
  "serde",
  "subduction",
] }
strum = { workspace = true }
files = { path = "../files/", optional = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
signpost = "*"

[features]
default = ["full", "skia" ]
vello = ["floem/vello", "files?/vello"]
vger = ["floem/vger"]
skia = ["floem/active-skia"]
skia-cpu = ["floem/skia-cpu"]
vello-cpu = ["floem/vello-cpu"]
tiny-skia = ["floem/tiny-skia"]
vello-hybrid = ["floem/vello-hybrid", "files?/vello-hybrid"]
full = ["dep:files"]
